tf/gcp/k8s-tests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      name: hello
  template:
    metadata:
      labels:
        name: hello
    spec:
      containers:
        - name: app
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    name: hello
spec:
  type: NodePort
  selector:
    name: hello
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: btmt-dev-public-ip
  labels:
    name: hello
spec:
  ingressClassName: "gce"
  defaultBackend:
    service:
      name: hello
      port:
        number: 8080
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello
                port:
                  number: 8080
