tf/gcp/k8s-tests/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment-2
spec:
  selector:
    matchLabels:
      name: app2
  replicas: 3
  template:
    metadata:
      labels:
        name: app2
    spec:
      containers:
        - name: hello-app-2
          image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0"
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  type: NodePort
  selector:
    name: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: btmt-dev-public-ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: app2
                port:
                  number: 80
