tf/gcp/k8s-tests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: btmt-public-ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /rest/v1/auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
